@@ -10,12 +10,13 @@ import javafx.stage.FileChooser;
 import java.io.File;
 import java.io.FileWriter;
 import java.time.LocalDate;
+import java.time.Period;
 import java.time.format.DateTimeFormatter;
 import java.util.List;
 
 /**
  * BulletinController — génère et télécharge le bulletin CSV
- * des etudiants avec leurs notes et mentions.
+ * d'un étudiant en récupérant ses notes via GradeDAO.
  */
 public class BulletinController {
 
@@ -23,6 +24,7 @@ public class BulletinController {
     private static final DateTimeFormatter FMT = DateTimeFormatter.ofPattern("dd/MM/yyyy");
 
     public void telechargerBulletin(StudentModel etudiant) {
+
         FileChooser fileChooser = new FileChooser();
         fileChooser.setTitle("Enregistrer le bulletin");
         fileChooser.setInitialFileName(
@@ -39,19 +41,15 @@ public class BulletinController {
 
             try (FileWriter writer = new FileWriter(file)) {
 
-                // ── En-tête ──────────────────────────────────────────────
                 writer.write("BULLETIN DE NOTES\n");
-                writer.write("Étudiant;%s %s\n".formatted(
-                        etudiant.getFirstName(), etudiant.getLastName()));
+                writer.write("Étudiant;" + etudiant.getFirstName() + " " + etudiant.getLastName() + "\n");
                 if (etudiant.getBirthDate() != null) {
-                    writer.write("Date de naissance;%s\n".formatted(
-                            etudiant.getBirthDate().format(FMT)));
+                    writer.write("Date de naissance;" + etudiant.getBirthDate().format(FMT) + "\n");
+                    int age = Period.between(etudiant.getBirthDate(), LocalDate.now()).getYears();
+                    writer.write("Âge;" + age + " ans\n");
                 }
-                writer.write("Âge;%d ans\n".formatted(calculerAge(etudiant.getBirthDate())));
-                writer.write("Date d'édition;%s\n".formatted(LocalDate.now().format(FMT)));
+                writer.write("Date d'édition;" + LocalDate.now().format(FMT) + "\n");
                 writer.write("\n");
-
-                // ── Notes ────────────────────────────────────────────────
                 writer.write("Matière;Note /20;Mention\n");
 
                 if (notes.isEmpty()) {
@@ -59,16 +57,14 @@ public class BulletinController {
                 } else {
                     double total = 0;
                     for (GradeModel note : notes) {
-                        writer.write("%s;%d;%s\n".formatted(
-                                note.getSubject(),
-                                note.getGrade(),
-                                mention(note.getGrade())));
+                        writer.write(note.getSubject() + ";" + note.getGrade()
+                                + ";" + mention(note.getGrade()) + "\n");
                         total += note.getGrade();
                     }
                     double moyenne = total / notes.size();
                     writer.write("\n");
-                    writer.write("MOYENNE GÉNÉRALE;%.2f;%s\n".formatted(
-                            moyenne, mention((int) Math.round(moyenne))));
+                    writer.write("MOYENNE GÉNÉRALE;" + String.format("%.2f", moyenne)
+                            + ";" + mention((int) Math.round(moyenne)) + "\n");
                 }
             }
 
@@ -87,11 +83,6 @@ public class BulletinController {
         }
     }
 
-    private int calculerAge(LocalDate birthDate) {
-        if (birthDate == null) return 0;
-        return java.time.Period.between(birthDate, LocalDate.now()).getYears();
-    }
-
     private String mention(int note) {
         if (note >= 18) return "Très Bien";
         if (note >= 16) return "Bien";
@@ -99,7 +90,4 @@ public class BulletinController {
         if (note >= 10) return "Passable";
         return "Insuffisant";
     }
-    //bouton telecharger le bulletin dans la vue statistique
-
-    
 }
